# ome-cmake-superbuild

./: .gitattributes  CMakeLists.txt  ExternalProjectHelpers.cmake  LICENSE.md  Options.cmake  README.md
cmake/: ExternalProjectHelpers.cmake  Options.cmake  SourceArchive.cmake  Sphinx.cmake  SphinxCheckInternalLinks.cmake  SphinxCheckRemoteLinks.cmake
cmake/compat/: FindXercesC.cmake
docs/contents/: CMakeLists.txt  conf.py.in  index.rst.in
docs/sphinx/: CMakeLists.txt  Makefile  building.rst  conf.py.in  errata.rst  index.rst  maintenance.rst  overview.rst  packages.rst  platforms.rst  prerequisites.rst
docs/sphinx/_templates/: globalbftoc.html
docs/sphinx/maintenance/: boost.rst  bzip2.rst  icu.rst  xalan.rst  xerces.rst
docs/sphinx/prerequisites/: ome-common.rst  ome-files.rst  ome-model.rst  ome-qtwidgets.rst  ome-xml.rst
helpers/: cmake_build.cmake  cmake_configure.cmake  cmake_environment.cmake  cmake_install.cmake  cmake_test.cmake  patch.cmake  python_install.cmake
scripts/: jenkins-build  jenkins-build.bat
